--- a/SutranWeb/Sutran.css
+++ b/SutranWeb/Sutran.css
@@ -1,29 +1,117 @@
-﻿body
+﻿.mydatagrid
 {
+	width: 80%;
+	border: solid 2px #2d89ef;
+	min-width: 80%;
 }
-.alinear
+.header
 {
-    text-align: center;
+	background-color: #2d89ef;
+	font-family: 'Segoe UI Semilight', 'Open Sans', Verdana, Arial, Helvetica, sans-serif;
+	color: White;
+	border: none 0px transparent;
+	height: 25px;
+	text-align: center;
+    font-weight: 300;
+	font-size: 14px;
+	
+}
+.altrows
+{
+    background-color: #fff;
+	font-family: Arial;
+	font-size: 14px;
+	color: #000;
+	min-height: 25px;
+	text-align: left;
+	border: none 0px transparent;
+}
+.altrows:hover
+{
+	background-color: #E8EAEF;
+	font-family: Arial;
+	text-align: left;
+}
+.rows
+{
+	background-color: #f9f9f9;
+	font-family: Arial;
+	font-size: 14px;
+	color: #000;
+	min-height: 25px;
+	text-align: left;
+	border: none 0px transparent;
+}
+.rows:hover
+{
+	background-color: #E8EAEF;
+	font-family: Arial;
+	text-align: left;
+}
+.selectedrow
+{
+	background-color: #ff8000;
+	font-family: Arial;
+	color: #fff;
+	font-weight: bold;
+	text-align: left;
+}
+.mydatagrid a /** FOR THE PAGING ICONS  **/
+{
+	background-color: Transparent;
+	padding: 5px 5px 5px 5px;
+	color: #fff;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+.mydatagrid a:hover /** FOR THE PAGING ICONS  HOVER STYLES**/
+{
+	background-color: #000;
+	color: #fff;
+}
+.mydatagrid span /** FOR THE PAGING ICONS CURRENT PAGE INDICATOR **/
+{
+	background-color: #c9c9c9;
+	color: #000;
+	padding: 5px 5px 5px 5px;
+}
+.pager
+{
+	background-color: #2d89ef;
+	font-family: Arial;
+	color: White;
+	height: 30px;
+	text-align: left;
+}
+
+.mydatagrid td
+{
+	padding: 5px;
+}
+.mydatagrid th
+{
+	padding: 5px;
 }
 .modalBackground
 {
-    background-color: silver;
-    opacity: 0.7;
+    background-color: transparent;
+    background: rgba(0, 0, 0, 0.22);
 }
-h3
-{
-    text-align: center;
-    background-color: #5D7B9D;
-    color: white;
+div.filtering {
+    border: 1px solid #999;
+    margin-bottom: 5px;
+    padding: 10px;
+    background-color: #EEE;
 }
-div.ex1
-{
-    background-color: #FFFDF8;
-    width: 500px;
-    margin: auto;
-    border: 2px solid #5D7B9D;
+div.jtable-main-container {
+    position: relative;
+    border: 1px solid #999;
+    margin-bottom: 5px;
+    padding: 10px;
 }
-th
+.mipanel
 {
-    text-align: left;
+    background-color: #FFFDF8; 
+	 display: inline-block;
 }
